...
                android:id="@+id/cardNumberLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_number" />

            <EditText
                android:id="@+id/cardNumberInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="creditCardNumber"
                android:ems="10"
                android:hint="@string/cardNumberHint"
                android:inputType="text" />
...
                android:id="@+id/expiryLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expiry_date" />

            <EditText
                android:id="@+id/expiryInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="creditCardExpirationDate"
                android:ems="10"
                android:hint="@string/mm_yy"
                android:inputType="text" />
...
                android:id="@+id/cvvLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cvv" />

            <EditText
                android:id="@+id/cvvInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="creditCardSecurityCode"
                android:ems="10"
                android:hint="@string/cvv_hint"
                android:inputType="number" />
...
                android:id="@+id/nameOnCardLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_on_card" />

            <EditText
                android:id="@+id/nameOnCardInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="name"
                android:ems="10"
                android:hint="@string/john_doe"
                android:inputType="text" />
...
                android:id="@+id/addressLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/address" />

            <EditText
                android:id="@+id/addressInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="postalAddress"
                android:ems="10"
                android:hint="@string/address_hint"
                android:inputType="text" />
...
                android:id="@+id/locationLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"/>

            <Spinner
                android:id="@+id/locationDropdown"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:ems="10"/>
        </LinearLayout>

        <LinearLayout
...
                android:id="@+id/countryLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/country" />

            <TextView
                android:id="@+id/countryText"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:gravity="center_vertical"
                android:text="@string/canada"
                android:textSize="18sp" />
        </LinearLayout>
...
                android:id="@+id/postalCodeLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/postal_code" />

            <EditText
                android:id="@+id/postalCodeInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="postalCode"
                android:ems="10"
                android:hint="@string/postal_code_hint"
                android:inputType="text" />
...
                android:id="@+id/phoneNumberLabelText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone_number" />

            <EditText
                android:id="@+id/phoneNumberInput"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:autofillHints="phone"
                android:ems="10"
                android:hint="@string/phone_number_hint"
                android:inputType="phone" />
...
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
            app:layout_constraintStart_toStartOf="@+id/left_guideline"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout9"
            app:layout_constraintVertical_bias="1.0" />

        <Button
            android:id="@+id/buyButton"
            android:layout_marginTop="24dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:onClick="buyButtonOnClick"
            android:text="@string/buy"
            app:layout_constraintBottom_toTopOf="@+id/bottom_guideline"
...
