<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.LoginActivity">

    <TextView
        android:id="@+id/loginPageTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/login_page_title"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/marginRight"
        app:layout_constraintStart_toStartOf="@+id/marginLeft"
        app:layout_constraintTop_toTopOf="@+id/marginTop"
        app:layout_constraintVertical_chainStyle="spread" />

    <LinearLayout
        android:id="@+id/usernameFormGroup"
        style="@style/input_form_group"
        app:layout_constraintBottom_toTopOf="@+id/passwordFormGroup"
        app:layout_constraintEnd_toStartOf="@+id/marginRight"
        app:layout_constraintStart_toStartOf="@+id/marginLeft"
        app:layout_constraintTop_toBottomOf="@+id/loginPageTitle">

        <TextView
            android:id="@+id/usernameLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:labelFor="@id/usernameInput"
            android:text="@string/username_prompt" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:autofillHints="username"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/passwordFormGroup"
        style="@style/input_form_group"
        app:layout_constraintEnd_toStartOf="@+id/marginRight"
        app:layout_constraintStart_toStartOf="@+id/marginLeft"
        app:layout_constraintTop_toBottomOf="@+id/usernameFormGroup">

        <TextView
            android:id="@+id/passwordLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:labelFor="@id/passwordInput"
            android:text="@string/password_prompt" />

        <EditText
            android:id="@+id/passwordInput"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:autofillHints="password"
            android:ems="10"
            android:inputType="textPassword"
            android:maxWidth="488dp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toStartOf="@+id/marginRight"
        app:layout_constraintStart_toStartOf="@+id/marginLeft"
        app:layout_constraintTop_toBottomOf="@+id/passwordFormGroup">

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onLoginButtonClick"
            android:text="@string/login_btn_title" />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:onClick="onCreateAccountButtonClick"
            android:text="@string/create_account_prompt"
            android:textAlignment="viewStart"
            android:textSize="12sp" />
    </LinearLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginTop"
        style="@style/mt_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginLeft"
        style="@style/ml_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="143dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/marginRight"
        style="@style/mr_16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

</androidx.constraintlayout.widget.ConstraintLayout>